<?xml version="1.0" encoding="utf-8"?>
<!-- UI elements and appearance of the Home screen -->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="homeViewModel"
            type="com.example.flowpass.home.HomeViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".home.HomeFragment">

        <TextView
            android:id="@+id/header_name"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:text="@string/home_label_name"
            android:textAlignment="center"
            android:textColor="@color/ocean"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/header_keywords"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginTop="24dp"
            android:text="@string/home_label_keywords"
            android:textAlignment="center"
            android:textColor="@color/ocean"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/header_password"
            app:layout_constraintStart_toEndOf="@+id/header_name"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/header_password"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:text="@string/home_label_password"
            android:textAlignment="center"
            android:textColor="@color/ocean"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/entry_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="65dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="120dp"
            android:verticalSpacing="2dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.49"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/prompt"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="4dp"
            android:gravity="center"
            android:text="@{homeViewModel.prompt}"
            android:textColor="@color/ocean"
            android:textSize="16sp"
            android:textStyle="italic"
            app:layout_constraintBottom_toTopOf="@+id/fab_add"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/entry_list" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginBottom="18dp"
            android:layout_marginEnd="18dp"
            android:tint="@color/white"
            android:onClick="@{() -> homeViewModel.onExit()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:srcCompat="@android:drawable/ic_secure"
            tools:layout_editor_absoluteX="339dp"
            android:contentDescription="@string/caption_lock" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginBottom="18dp"
            android:layout_marginEnd="18dp"
            android:tint="@color/white"
            android:onClick="@{() -> homeViewModel.onAdd()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/fab_exit"
            app:srcCompat="@android:drawable/ic_input_add"
            android:contentDescription="@string/caption_add" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>